# vmcmusicplayer

./: hs.py  hyper.sh  installscript  libmysqlclient18_5.5.41-r0_armv7ahf-vfp-neon.ipk  libmysqld18_5.5.41-r0_armv7ahf-vfp-neon.ipk  vmcmusicplayer.bb
vmcmusicplayer/: Makefile.am  configure.ac  vmcmusicplayer.cpp  vmcmusicplayer.h
